Resolving the minor errors

--- a/backend/views/forgotPasswordEmail.ejs
+++ b/backend/views/forgotPasswordEmail.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div style="display: flex; justify-content: space-evenly">
+  </head>
+  <body>
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
       <table
         style="
           width: 400px;
@@ -14,13 +14,19 @@
           border: 2px solid #8a5cf672;
           border-radius: 10px;
           background-color: #a457c9;
+          border-collapse: collapse;
         "
       >
-        <th style="color: black">Reset Your Password</th>
         <tr>
-          <td style="text-align: center">
+          <td colspan="2" style="text-align: center; padding: 10px;">
+            <span style="display: block; font-size: 20px; color: black;">ChatApp</span>
+            <span style="display: block; font-size: 16px; color: black;">Reset Your Password</span>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" style="text-align: center; padding: 10px;">
             <a
-              href="http:localhost:8000/user/reset-password/<%=token%>"
+              href="http://localhost:8000/users/reset-password/<%=token%>"
               style="
                 background-color: #8b5cf6;
                 text-decoration: none;
@@ -38,5 +44,5 @@
         </tr>
       </table>
     </div>
-</body>
+  </body>
 </html>
