making forntend page for reset-password

--- a/backend/views/forgotPasswordEmail.ejs
+++ b/backend/views/forgotPasswordEmail.ejs
@@ -6,7 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      "
+    >
       <table
         style="
           width: 400px;
@@ -18,15 +25,19 @@
         "
       >
         <tr>
-          <td colspan="2" style="text-align: center; padding: 10px;">
-            <span style="display: block; font-size: 20px; color: black;">ChatApp</span>
-            <span style="display: block; font-size: 16px; color: black;">Reset Your Password</span>
+          <td colspan="2" style="text-align: center; padding: 10px">
+            <span style="display: block; font-size: 20px; color: black"
+              >ChatApp</span
+            >
+            <span style="display: block; font-size: 16px; color: black"
+              >Reset Your Password</span
+            >
           </td>
         </tr>
         <tr>
-          <td colspan="2" style="text-align: center; padding: 10px;">
+          <td colspan="2" style="text-align: center; padding: 10px">
             <a
-              href="http://localhost:8000/users/reset-password/<%=token%>"
+              href="http://localhost:5173/users/reset-password/<%=token%>"
               style="
                 background-color: #8b5cf6;
                 text-decoration: none;
