--- a/backend/views/verifyUserEmail.ejs
+++ b/backend/views/verifyUserEmail.ejs
@@ -18,7 +18,7 @@
         <th style="color: black">Verify Your Email</th>
         <tr>
             <td style="text-align: center;">
-                <a href="http://localhost:8000/users/verify-user/<%=token%>" 
+                <a href="http://localhost:8000/api/v1/users/verify-user/<%=token%>" 
                     style="
                     background-color: #8b5cf6;
                     text-decoration: none;
